# shaarlot

./: .gitignore  Cargo.toml  Makefile.toml  README.md  bookmarks.http  build.rs  clean.sh  dev.sh  docker.sh  kill-servers.sh  new-migration.sh  postgres.sh  prod.sh  update-entities.sh  update-prod.sh
.github/workflows/: main.yml  release.yml  staging.yml  test.yml
backend/: Cargo.toml
backend/src/: application.rs  database.rs  domain.rs  infrastructure.rs  lib.rs  mailer.rs  main.rs  query-params-registry.txt  rest.rs  session.rs  sessions.rs  url.rs
backend/src/application/: create_account.rs  create_bookmark.rs  create_password_recovery.rs  delete_bookmark.rs  find_bookmark.rs  get_bookmark_stats.rs  get_tags.rs  get_url_details.rs  import_bookmarks.rs  perform_password_recovery.rs  search_bookmarks.rs  update_bookmark.rs  update_user.rs  validate_email.rs
backend/src/database/: bookmarks.rs  pins.rs  tags.rs  users.rs
backend/src/domain/: bookmark.rs  entities.rs  repositories.rs  values.rs
backend/src/domain/entities/: account.rs  bookmark.rs  password_recovery.rs
backend/src/domain/values/: tag.rs  url_details.rs
backend/src/infrastructure/: database.rs  mailer.rs  repositories.rs  session_store.rs
backend/src/infrastructure/database/: accounts.rs  bookmarks.rs  bookmarks_tags.rs  password_recoveries.rs  tags.rs
backend/src/infrastructure/repositories/: account_repository.rs  bookmark_repository.rs  password_recovery_repository.rs
backend/src/presentation/: rest.rs
backend/src/presentation/rest/: application.rs  bookmarks.rs  emails.rs  password_recoveries.rs  sessions.rs  shaarli_import_api.rs  tags.rs  urls.rs  users.rs
backend/src/rest/: bookmarks.rs  emails.rs  json.rs  password_recoveries.rs  sessions.rs  shaarli_import_api.rs  tags.rs  users.rs
backend/src/sessions/: session.rs
common/: Cargo.toml
common/src/: lib.rs
docker/: Dockerfile  Dockerfile.ubuntu-22.04
entity/: Cargo.toml
entity/src/: account.rs  bookmark.rs  bookmark_tag.rs  lib.rs  password_recovery.rs  pin.rs  prelude.rs  tag.rs  user.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: bookmark.rs  bookmark_provider.rs  bookmarks.rs  bookmarks_provider.rs  components.rs  create_bookmark.rs  data.rs  delete_bookmark.rs  edit_bookmark.rs  eventually.rs  features.rs  login.rs  logout.rs  main.rs  menu.rs  profile.rs  protected.rs  qr_code.rs  qr_code_overlay.rs  recover_password.rs  signup.rs  signup_success.rs  tag_input.rs  tags_provider.rs  validate_email.rs
frontend/src/bookmarks/: bookmark.rs  bookmarks_provider.rs  qr_code.rs  qr_code_overlay.rs
frontend/src/components/: highlight.rs  nav.rs  page_size.rs  protected.rs  tag_input.rs  tags_provider.rs
frontend/src/features/: bookmarks.rs
frontend/src/features/authentication/: pages.rs
frontend/src/features/authentication/pages/: login.rs  logout.rs  recover_password_form.rs  recover_password_start.rs
frontend/src/features/bookmarks/: bookmark.rs  bookmark_provider.rs  bookmarks_provider.rs  bookmarks_query.rs  data.rs  pages.rs  qr_code.rs  tags_provider.rs
frontend/src/features/bookmarks/pages/: bookmarks.rs  create_bookmark.rs  delete_bookmark.rs  edit_bookmark.rs  view_bookmark.rs
frontend/src/features/profile/: pages.rs
frontend/src/features/profile/pages/: profile.rs  validate_email.rs
frontend/src/features/signup/: pages.rs
frontend/src/features/signup/pages/: signup_form.rs
frontend/src/features/tag_cloud/: pages.rs
frontend/src/features/tag_cloud/pages/: tag_cloud.rs
frontend/src/features/tools/: pages.rs
frontend/src/features/tools/pages/: import_shaarli_api.rs  tools.rs
frontend/static/: style.scss
http/: bookmarks.http
migration/: Cargo.toml
migration/src/: lib.rs  m20230212_000001_create_table.rs  m20230213_195707_add_title_to_bookmarks.rs  m20230219_171914_add_dates_to_bookmarks.rs  m20230221_181655_create_table_users.rs  m20230227_211829_add_email_to_user.rs  m20230306_194756_add_email_token_to_user.rs  m20230311_105845_add_new_email_to_user.rs  m20230312_124742_create_table_password_recovery.rs  m20230314_214602_rename_user_to_account.rs  m20230314_225232_add_user_id_to_bookmark.rs  m20230331_194725_create_tags_tables.rs  m20230414_180807_add_private_to_bookmark.rs  m20230506_102057_add_pin_table.rs  m20230521_114151_add_fk_from_password_recovery_to_account.rs
rest-api/: Cargo.toml
rest-api/src/: application.rs  bookmarks.rs  error_response.rs  import_shaarli_api.rs  lib.rs  password_recoveries.rs  sessions.rs  tags.rs  urls.rs  users.rs  validate_email.rs
rest-api/src/bookmarks/: create.rs  delete.rs  get_many.rs  get_one.rs  update.rs
rest-api/src/password_recoveries/: create.rs  update.rs
rest-api/src/users/: create.rs  get.rs  update.rs
src/: database.rs  main.rs  rest.rs
src/database/: bookmarks.rs
src/rest/: error_response.rs  json.rs
