[package]
name = "rbm"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration", "rest-api", "backend", "frontend"]

[dependencies]
backend = { path = "backend" }
migration = { path = "migration" }
axum = "0.6.4"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
sea-orm-migration = "0.11.0"
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["trace"] }
axum-extra = { version = "0.5.0", features = ["spa"] }
tracing-subscriber = "0.3.16"
log = "0.4.17"
tracing = "0.1.37"
