[package]
name = "rbm"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[workspace]
members = [".", "entity", "migration", "rest-api", "common", "backend", "frontend"]

[dependencies]
backend = { path = "backend" }
migration = { path = "migration" }
axum = "0.6.9"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "signal"] }
sea-orm-migration = "0.11.0"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace"] }
axum-extra = { version = "0.5.0", features = ["spa"] }
tracing-subscriber = "0.3.16"
log = "0.4.17"
tracing = "0.1.37"
secrecy = "0.8.0"
argon2 = "0.4.1"
axum-sessions = "0.4.1"

[build-dependencies]
vergen = "7.5.1"
build-data = "0.1.3"
