[package]
name = "backend"
version = "0.1.0"
edition = "2021"
build = "../build.rs"
publish = false

[dependencies]
argon2 = "0.5.0"
async-trait = "0.1.66"
axum = "0.6.9"
axum-extra = { version = "0.5.0", features = ["spa"] }
axum-sessions = "0.4.1"
chrono = "0.4.23"
common = { path = "../common" }
entity = { path = "../entity" }
lettre = "0.10.3"
log = "0.4.17"
migration = { path = "../migration" }
qrcode-generator = "4.1.7"
rest-api = { path = "../rest-api", features = ["backend"] }
sea-orm = { version = "0.11.0", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
sea-orm-migration = "0.11.0"
secrecy = "0.8.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.3.0", features = ["v4"] }
webpage = "1.5.0"

[build-dependencies]
build-data = "0.1.3"
vergen = "7.5.1"
