[package]
name = "backend"
version = "0.1.0"
edition = "2021"
build = "../build.rs"
publish = false

[dependencies]
argon2 = "0.5.0"
async-trait = "0.1.68"
axum = "0.6.16"
axum-sessions = "0.5.0"
base64 = "0.21.0"
chrono = "0.4.24"
common = { path = "../common" }
entity = { path = "../entity" }
include_dir = "0.7.3"
lettre = "0.10.4"
log = "0.4.17"
migration = { path = "../migration" }
mime_guess = "2.0.4"
qrcode-generator = "4.1.8"
redis = { version = "0.23.0", features = ["tokio-comp"] }
rest-api = { path = "../rest-api", features = ["backend"] }
sea-orm = { version = "0.11.2", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
sea-orm-migration = "0.11.2"
secrecy = "0.8.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace", "fs", "compression-full" ] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.3.1", features = ["v4"] }
webpage = "1.5.0"
urlencoding = "2.1.2"

[build-dependencies]
build-data = "0.1.3"
vergen = "7.5.1"
