[package]
name = "backend"
version.workspace = true
edition = "2021"
build = "../build.rs"
publish = false
repository = "https://github.com/cpollet/shaarlot"

[dependencies]
argon2 = "0.5.0"
async-trait = "0.1.68"
axum = "0.6.18"
axum-sessions = "0.5.0"
base64 = "0.22.0"
chrono = { version = "0.4.24", features = ["serde"] }
common = { path = "../common" }
entity = { path = "../entity" }
include_dir = "0.7.3"
lettre = "0.10.4"
log = "0.4.17"
migration = { path = "../migration" }
mime_guess = "2.0.4"
qrcode-generator = "4.1.8"
redis = { version = "0.23.0", features = ["tokio-comp"] }
rest-api = { path = "../rest-api", features = ["backend"] }
sea-orm = { version = "0.11.3", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
sea-orm-migration = "0.11.3"
secrecy = "0.8.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace", "fs", "compression-full" ] }
tracing = "0.1.38"
tracing-subscriber = "0.3.17"
uuid = { version = "1.3.3", features = ["v4"] }
webpage = { version = "1.5.0", default-features = false }
urlencoding = "2.1.2"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"
reqwest = { version = "0.11.18", features = ["json"] }
url = "2.3.1"

[build-dependencies]
build-data = "0.1.3"
vergen = "7.5.1"
