[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rest-api = { path = "../rest-api" }
gloo-net = "0.2.6"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
#stdweb = "0.4.20"
#wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = ["Event", "EventTarget", "InputEvent", "HtmlInputElement"] }
urlencoding = "2.1.2"
