[package]
name = "frontend"
version.workspace = true
edition = "2021"
publish = false
repository = "https://github.com/cpollet/shaarlot"

[dependencies]
rest-api = { path = "../rest-api", features = ["frontend"] }
common = { path = "../common" }
gloo-net = "0.2.6"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
#stdweb = "0.4.20"
#wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.63", features = ["Event", "EventTarget", "InputEvent", "HtmlInputElement"] }
urlencoding = "2.1.2"
chrono = {version = "0.4.24", features = ["serde"] }
gloo-console = "0.2.3"
secrecy = { version = "0.8.0", features = ["serde"] }
yew-hooks = "0.2.0"
uuid = { version = "1.3.2", features = ["v4", "js"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_urlencoded = "0.7.1"