[package]
name = "migration"
version.workspace = true
edition = "2021"
publish = false
repository = "https://github.com/cpollet/rbm"

[lib]

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm-migration = { version = "0.11.3", features = [ "runtime-tokio-rustls", "sqlx-postgres" ] }
