[package]
name = "rest-api"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.9" , optional = true }
chrono = "0.4.23"
http = "0.2.9"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
gloo-net = { version = "0.2.6", optional = true }

[features]
default = []
server = ["dep:axum"]
client = ["dep:gloo-net"]
