[package]
name = "rest-api"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.11" , optional = true }
chrono = { version = "0.4.24", features = ["serde"] }
http = "0.2.9"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.155", features = ["derive"] }
gloo-net = { version = "0.2.6", optional = true }

[features]
default = []
backend = ["dep:axum"]
frontend = ["dep:gloo-net"]
