[package]
name = "rest-api"
version.workspace = true
edition = "2021"
publish = false
repository = "https://github.com/cpollet/shaarlot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18" , optional = true }
chrono = { version = "0.4.38", features = ["serde"] }
http = "0.2.9"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
gloo-net = { version = "0.2.6", optional = true }

[features]
default = []
backend = ["dep:axum"]
frontend = ["dep:gloo-net"]
